--- a/ccatcracker/templates/base_8.html
+++ b/ccatcracker/templates/base_8.html
@@ -16,8 +16,13 @@
   <!--Lightbox-->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-<meta name="Description" content=" cdac Established in March 1988, as a Scientific Society of the Department of Information Technology, Ministry of Communications and Information Technology, Government of India. C-DAC, is primarily an R and D institution involved in the design, development and deployment of advanced Information Technology (IT) based solutions such as Super Computers, Financial and Capital market simulation and modeling, Network and Internet Software, Healthcare, Real Time Systems, eGovernance, Data Warehousing, Digital library, Artificial Intelligence and Natural language processing and so on..."/>
-<meta name="KeyWords" content="acts,advance,bioinformatics,cdac,centre,computational,computers,computing,development"/>
+  <meta name="keywords" content="CDAC C-CAT 2019, CDAC C-CAT, CDAC C-CAT application form, CDAC C-CAT admit card, CDAC C-CAT result">
+  <meta name="description" content="CDAC C-CAT 2019 -The Centre for Development of Advanced Computing (CDAC) conducts the computerized Common Admission Test (C-CAT) twice a year.  CDAC has declared CDAC C-CAT result on December 27.">
+  <meta property="og:type" content="articles" />
+  <meta property="og:title" content="CDAC C-CAT 2019 - Result (Announced),Cutoff, Counselling, Seat Allotment" />
+  <meta property="og:description" content="CDAC C-CAT 2019 -The Centre for Development of Advanced Computing (CDAC) conducts the computerized Common Admission Test (C-CAT) twice a year.  CDAC has declared CDAC C-CAT result on December 27." />
+  <meta name="twitter:title" content="CDAC C-CAT 2019 - Result (Announced),Cutoff, Counselling, Seat Allotment" />
+<meta name="twitter:description" content="CDAC C-CAT 2019 -The Centre for Development of Advanced Computing (CDAC) conducts the computerized Common Admission Test (C-CAT) twice a year.  CDAC has declared CDAC C-CAT result on December 27." />
 
 
   <title>{% block title %}{% endblock %}</title>
