--- a/ccatcracker/templates/base_9.html
+++ b/ccatcracker/templates/base_9.html
@@ -15,10 +15,12 @@
 
   <!--Lightbox-->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
-
-<meta name="Description" content=" cdac Established in March 1988, as a Scientific Society of the Department of Information Technology, Ministry of Communications and Information Technology, Government of India. C-DAC, is primarily an R and D institution involved in the design, development and deployment of advanced Information Technology (IT) based solutions such as Super Computers, Financial and Capital market simulation and modeling, Network and Internet Software, Healthcare, Real Time Systems, eGovernance, Data Warehousing, Digital library, Artificial Intelligence and Natural language processing and so on..."/>
-<meta name="KeyWords" content="acts,advance,bioinformatics,cdac,centre,computational,computers,computing,development"/>
-
+  <meta name="keywords" content="CDAC C-CAT Application Form 2019; CDAC C-CAT Application Form December 2019; CDAC C-CAT Registration">
+  <meta name="description" content="CDAC C-CAT Application Form 2019-  The Centre for Development of Advanced Computing had released CDAC C-CAT 2019 registration for February batch on October 30, 2019.">
+  <meta property="og:type" content="articles" />
+  <meta property="og:title" content="CDAC C-CAT Application Form 2019, Registration (Over) - Apply here" />
+  <meta property="og:description" content="CDAC C-CAT Application Form 2019-  The Centre for Development of Advanced Computing had released CDAC C-CAT 2019 registration for February batch on October 30, 2019." />
+  
 
   <title>{% block title %}{% endblock %}</title>
   <body>
