--- a/ccatcracker/templates/pages/admit.html
+++ b/ccatcracker/templates/pages/admit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html '%}
+{% extends 'base_8.html '%}
 {% block title %}CDAC C-CAT Admit Card Dec 2019 (Released) - Download @ cdac.in{% endblock %}
 {% block content %}
 <style>
