--- a/ccatcracker/templates/pages/result.html
+++ b/ccatcracker/templates/pages/result.html
@@ -1,4 +1,4 @@
-{% extends 'base.html '%}
+{% extends 'base_8.html '%}
 {% block title %}CDAC C-CAT 2019 - Result ,Cutoff, Counselling, Seat Allotment{% endblock %}
 {% block content %}
 <style>
