--- a/ccatcracker/templates/music/songs.html
+++ b/ccatcracker/templates/music/songs.html
@@ -53,16 +53,17 @@ form.example input[type=text] {
     padding-top: 50px;
     padding-bottom: 50px;
 }
+.nbsp {
+    white-space: nowrap;
+}
 
 </style>
-<section style="background-color: black;">    
-<div id="content-wrap">
-<section id="about" class="py-4" >
+
+<section id="about" class="py-4" style="background-color:#f7f7f7">
+	<div class="container" style="background-color:black;">
 
 
-	<div class="container">
-	  <div class="row">
-		<div class="col-md-8" >
+	
 			<h2 style="color: white;">Search your Faviourite Songs</h2>
 			<form class="example" method="post" action="{% url 'song_list' %}">
 					{% csrf_token %}
@@ -75,18 +76,23 @@ form.example input[type=text] {
 
 				</p>
 			  <br> <br>
-			  <h4 style="color: white;"> <strong>{{songs.0.song_names}} </strong></h4> <br>
+	</div>
+</section>
+<section id="about" class="py-4" style="background-color:#f7f7f7">
+	<div class="container" style="background-color:white;">
+
+			  <h4 ><strong>{{songs.0.song_names}} </strong></h4> <br>
               {% if songs %}
               {% for p in songs %} 
-              <h5 style="color:white;">
-                    {{p.sargam|linebreaks}}    
+              <h5 style="color:black;">
+				  <p >
+				<strong>{{p.sargam|linebreaksbr}}</strong>	
+				</p>
 			  </h5>
               {% endfor %}
 			  {% endif %} <br> <br>
 			  <h2 style="color: white;">You may also like this :</h2>
-<section id="listings" class="py-4">
-		<div class="container">
-		  <div class="row">
+
 	
 				{% if lists %}
 				{% for list in lists %}
@@ -112,14 +118,7 @@ form.example input[type=text] {
 				<p>No Listings Available</p>
 			  </div>
 			  {% endif %}
-			</section> 
-			
-</section>	
-			
-			
-		</div>
-			
-		</div>
+		
 	  </div>
 	</div>
   </section>
